--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "ccxt": "^4.5.12",
+    "cron": "^4.3.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "yaml": "^2.8.1"
   }
 }
