Added skeleton index logic

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "format": "prettier --write .",
+    "format": "prettier --write . --ignore-path .prettierignore",
     "install:all": "pnpm install && cd lib/o2-connector-ts && pnpm install && cd ../.."
   },
   "devDependencies": {
