--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "ccxt": "^4.5.12",
     "cron": "^4.3.3",
+    "decimal.js": "^10.6.0",
+    "fuels": "^0.101.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "yaml": "^2.8.1"
