--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "format": "prettier --write . --ignore-path .prettierignore",
     "install:all": "pnpm install && cd lib/o2-connector-ts && pnpm install && cd ../.."
   },
@@ -15,9 +15,11 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "ccxt": "^4.5.12",
     "cron": "^4.3.3",
     "decimal.js": "^10.6.0",
+    "ethers": "^6.15.0",
     "fuels": "^0.101.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
