--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/o2-connector-ts"]
 	path = lib/o2-connector-ts
-	url = https://github.com/fuel-infrastructure/o2-connector-ts.git
+	url = git@github.com:FuelLabs/o2-connector-ts.git
