you need build first

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "tsc && node dist/src/index.js",
     "format": "prettier --write . --ignore-path .prettierignore",
     "install:all": "pnpm install && cd lib/o2-connector-ts && yarn install && cd ../.."
   },
