--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "build": "tsc",
     "start": "tsc && node dist/src/index.js",
     "format": "prettier --write . --ignore-path .prettierignore",
-    "install:all": "pnpm install && cd lib/o2-connector-ts && yarn install && cd ../.."
+    "install:all": "pnpm install && cd lib/o2-connector-ts && pnpm install && cd ../.."
   },
   "devDependencies": {
     "@types/node": "^24.9.1",
