--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/src/index.js",
+    "start": "tsc && node dist/src/index.js",
     "format": "prettier --write . --ignore-path .prettierignore",
     "install:all": "pnpm install && cd lib/o2-connector-ts && pnpm install && cd ../.."
   },
@@ -19,7 +19,7 @@
     "ccxt": "^4.5.12",
     "decimal.js": "^10.6.0",
     "ethers": "^6.15.0",
-    "fuels": "^0.101.3",
+    "fuels": "^0.102.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "yaml": "^2.8.1"
