--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,10 @@
     "strict": true,
     "esModuleInterop": true,
     "baseUrl": ".",
-    "paths": {
-      "lib/o2-connector-ts": ["lib/o2-connector-ts/src/index.ts"],
-      "lib/o2-connector-ts/*": ["lib/o2-connector-ts/src/*"]
-    },
     "skipLibCheck": true,
     "moduleResolution": "node",
     "sourceMap": true
   },
-  "include": ["src", "lib/o2-connector-ts"],
-  "exclude": ["lib/o2-connector-ts/examples"]
+  "include": ["src", "lib"],
+  "exclude": []
 }
