--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "ws": "^8.18.3",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "viem": "^2.36.0"
   }
 }
